--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,7 @@
         "exports": "always-multiline",
         "functions": "never"
       }
-    ]
+    ],
+    "lit/attribute-value-entities":"warn"
   }
 }
